fix(contact):Improved the contrast of the submit modal and added the telephone area code automatically

--- a/OMyDnD/src/styles/index.scss
+++ b/OMyDnD/src/styles/index.scss
@@ -49,8 +49,14 @@ Header {
     background-color: #4B5563 !important; /* Fond gris */
     color: white !important; /* Texte en blanc */
     border-radius: 10px !important; /* Coins arrondis */
-    padding: 20px !important; /* Espacement intérieur */
-    
+    padding: 20px !important; /* Espacement intérieur */    
+    font-family: cursive !important; /* Police cursive */
+    font-size: larger !important; /* Taille de la police */
+    text-shadow:
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+        -1px  1px 0 #000,
+         1px  1px 0 #000; /* Ombres portées pour créer l'effet de contour */
 }
 
 
